# resource2code

./: README.md  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue
src-tauri/: Cargo.toml  log4rs.yaml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/datasource/: mod.rs
src-tauri/src/db/: clickhouse.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs  sqlserver.rs
src-tauri/src/function/: file.rs
src-tauri/src/llm/: agent.rs  context_builder.rs  mod.rs  ollama.rs  openai.rs  prompt.rs
src-tauri/src/storage/: code_sample.rs  datasource.rs  init.sql  mod.rs  sys_config.rs
src-tauri/src/task/: code_gen_task.rs  mod.rs
src/components/: AIChat.vue  CodeGenResultViewer.vue  DataSourceForm.vue  LLMConfigDialog.vue  ResourceExplorer.vue  RuleManagerDialog.vue
src/router/: index.ts
src/services/: DataSourceService.ts  RuleService.ts  dto.ts
src/styles/: main.scss
