[package]
name = "resource2code"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "resource2code_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.5", features = [
    "mysql",
    "sqlite",
    "postgres",
    "runtime-tokio-native-tls",
] }
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }
anyhow = { version = "1.0.95" }
once_cell = "1.20.3"
thiserror = "2.0.11"
uuid = { version = "1.13.1", features = ["serde", "v4"] }
walkdir = "2.5.0"
rig-core = "0.9.1"
async-trait = "0.1.87"
tauri-plugin-dialog = "2"
urlencoding = "2.1.3"
tauri-plugin-fs = "2"
log = "0.4.14"
log4rs = { version = "1.3.0", features = [
    "console_appender",
    "rolling_file_appender",
    "size_trigger",
    "time_trigger",
    "pattern_encoder",
    "serde",
] }
tempfile = "3.19.1"
clickhouse = "0.13.3"
tiberius = "0.12.3"
tokio-util = { version = "0.7.15", features = ["compat"] }
